# tianqi

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  nginx.conf  test_compatibility.py  万语风.md
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  polywind.service  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: agro.py  air_quality.py  chat.py  construction.py  deps.py  disaster.py  disaster_cross_border.py  energy.py  haze.py  health.py  insurance.py  journal.py  marine.py  mutual_aid.py  notification.py  observation.py  photos.py  schemas.py  weather.py  weather_health.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py  constants.py  database.py  exceptions.py  logging.py
backend/app/middleware/: error_handler.py  request_id.py  security.py
backend/app/models/: __init__.py  api_key.py  base.py  journal.py  mutual_aid.py  notification.py  observation.py  user.py
backend/app/services/: agent_service.py  agro_decision_service.py  air_quality_service.py  api_gateway_service.py  construction_safety_service.py  cross_border_service.py  disaster_service.py  earthquake_service.py  energy_forecast_service.py  flood_service.py  haze_monitor_service.py  health_index_service.py  historical_service.py  insurance_index_service.py  journal_service.py  lifestyle_service.py  marine_decision_service.py  marine_service.py  mutual_aid_service.py  observation_service.py  photo_wall_service.py  weather_service.py
backend/app/tools/: weather_tools.py
backend/tests/: conftest.py  test_agent_service.py  test_agent_service_new.py  test_agro_decision_service.py  test_air_quality_service.py  test_api.py  test_api_gateway_service.py  test_config.py  test_construction_safety_service.py  test_cross_border_service.py  test_database.py  test_disaster_api.py  test_disaster_service.py  test_disaster_service_new.py  test_earthquake_service.py  test_energy_forecast_service.py  test_exceptions.py  test_flood_service.py  test_haze_monitor_service.py  test_health_index_service.py  test_historical_service.py  test_insurance_index_service.py  test_journal_service.py  test_lifestyle_service.py  test_main_app.py  test_marine_decision_service.py  test_marine_service.py  test_mutual_aid_service.py  test_observation_service.py  test_photo_wall_service.py  test_schemas_and_exceptions.py  test_v1_api.py  test_weather_service.py
docs/: LAYOUT_FIX_CONFIRMED.md  LAYOUT_FIX_FINAL.md  LAYOUT_FIX_REPORT.md  LAYOUT_ISSUE_ANALYSIS.md  TEST_PLAN.md  TEST_QUICK_REFERENCE.md  TEST_REPORT.md  research-enterprise-social-features.md
frontend/: dashboard.html.legacy  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
(+36 files in other folders)
