[project]
name = "polywind-backend"
version = "0.1.0"
description = "万语风 (PolyWind) - 面向中国—东盟的多语言气象智能决策助手"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web框架
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "python-multipart>=0.0.9",

    # LLM & Agent
    "langchain>=0.3.0,<1.0",
    "langchain-community>=0.3.0,<1.0",
    "langchain-openai>=0.2.0,<1.0",
    "langgraph>=0.2.0,<1.0",

    # HTTP客户端
    "httpx>=0.27.0,<1.0",

    # 重试与韧性
    "tenacity>=9.0.0,<10.0",

    # 数据校验
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.5.0,<3.0",

    # 多语言处理
    "langdetect>=1.0.9",

    # 日志
    "structlog>=24.0.0",

    # 可观测性
    "prometheus-fastapi-instrumentator>=7.0.0",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.0,<3.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    # 测试
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "respx>=0.22.0",

    # 代码质量
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",

    # 类型存根
    "types-requests>=2.31.0",
]

prod = [
    # 生产环境额外依赖
    "gunicorn>=23.0.0",
    "asyncpg>=0.30.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S104",   # possible binding to all interfaces (0.0.0.0 is intentional for containers)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langchain_openai.*",
    "langgraph.*",
    "langdetect.*",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "app/tools/*",     # LangChain tools，测试难度大
]

[tool.coverage.report]
fail_under = 65
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
